Bug 1310904: Solve compiling errors in  non MOZ_GAMEPAD platforms.

MozReview-Commit-ID: 1iT94OLtVpV